# sash

./: CMakeLists.txt  README.md
cmake/: Functions.cmake
include/: util.h
include/sash/: builtins.h  command.h  input.h  uthash.h  util.h  variable.h
src/: CMakeLists.txt  builtins.c  command.c  input.c  main.c  util.c  variable.c
test/: CMakeLists.txt
test/input/: CMakeLists.txt  input_test.c
